# Topic-Modeling-Recommendation

./: .env  LDA-modeling-test.ipynb  concatenate-csv-files.ipynb  pyproject.toml  requirements.txt
Data/: MoodyLyrics.csv
Lyrics_extraction/: artists-copy.txt  artists.txt  lyric_extraction_2.ipynb  lyrics_extraction.ipynb  lyrics_extraction.py  scraped_lyrics_topic_modeling_ready.csv
Results/: ldavis_prepared_10  ldavis_prepared_10.html
